<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:fillViewport="true"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeFragment">

        <View
            android:id="@+id/rectangle_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:background="@drawable/background_rec_shape_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            style="@style/Banknest.TextAppearance.headLine.white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_to_bank"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/backgroundImage_width"
            android:layout_height="@dimen/backgroundImage_width"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_card_visa"
            app:layout_constraintEnd_toEndOf="@+id/appCompatTextView"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

        <ImageView
            android:id="@+id/cardImage"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_card_vias_v2"
            android:layout_width="@dimen/backgroundImage_width"
            android:layout_height="@dimen/backgroundImage_width"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/text2"
            style="@style/Banknest.TextAppearance.title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/bank_customers"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2" />


        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/compose_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2">
        </androidx.compose.ui.platform.ComposeView>


        <Button
            android:id="@+id/button3"
            style="@style/Banknest.TextAppearance.Button.subTitle.white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/show_all_customer_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/compose_view" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.60" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</layout>
